lib/miniaudio/miniaudio.auto.c.v


// MA_API ma_uint64 ma_resampler_get_input_latency(const ma_resampler* pResampler);
fn C.ma_resampler_get_input_latency(p_resampler &C.ma_resampler) u64
[inline]
pub fn resampler_get_input_latency(p_resampler &C.ma_resampler) u64 {
	return C.ma_resampler_get_input_latency(p_resampler)
}

// MA_API ma_uint64 ma_resampler_get_output_latency(const ma_resampler* pResampler);
fn C.ma_resampler_get_output_latency(p_resampler &C.ma_resampler) u64
[inline]
pub fn resampler_get_output_latency(p_resampler &C.ma_resampler) u64 {
	return C.ma_resampler_get_output_latency(p_resampler)
}

// MA_API ma_channel_converter_config ma_channel_converter_config_init(ma_format format, ma_uint32 channelsIn, const ma_channel* pChannelMapIn, ma_uint32 channelsOut, const ma_channel* pChannelMapOut, ma_channel_mix_mode mixingMode);
fn C.ma_channel_converter_config_init(format Format, channels_in u32, p_channel_map_in &C.ma_channel, channels_out u32, p_channel_map_out &C.ma_channel, mixing_mode C.ma_channel_mix_mode) C.ma_channel_converter_config
[inline]
pub fn channel_converter_config_init(format Format, channels_in u32, p_channel_map_in &C.ma_channel, channels_out u32, p_channel_map_out &C.ma_channel, mixing_mode C.ma_channel_mix_mode) C.ma_channel_converter_config {
	return C.ma_channel_converter_config_init(format, channels_in, p_channel_map_in, channels_out,
		p_channel_map_out, mixing_mode)
}

// MA_API ma_result ma_channel_converter_init(const ma_channel_converter_config* pConfig, ma_channel_converter* pConverter);
fn C.ma_channel_converter_init(p_config &C.ma_channel_converter_config, p_converter &C.ma_channel_converter) Result
[inline]
pub fn channel_converter_init(p_config &C.ma_channel_converter_config, p_converter &C.ma_channel_converter) Result {
	return C.ma_channel_converter_init(p_config, p_converter)
}

// MA_API void ma_channel_converter_uninit(ma_channel_converter* pConverter);
fn C.ma_channel_converter_uninit(p_converter &C.ma_channel_converter)
[inline]
pub fn channel_converter_uninit(p_converter &C.ma_channel_converter) {
	C.ma_channel_converter_uninit(p_converter)
}

// MA_API ma_result ma_channel_converter_process_pcm_frames(ma_channel_converter* pConverter, void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount);
fn C.ma_channel_converter_process_pcm_frames(p_converter &C.ma_channel_converter, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result
[inline]
pub fn channel_converter_process_pcm_frames(p_converter &C.ma_channel_converter, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result {
	return C.ma_channel_converter_process_pcm_frames(p_converter, p_frames_out, p_frames_in,
		frame_count)
}

// MA_API ma_data_converter_config ma_data_converter_config_init_default();
fn C.ma_data_converter_config_init_default() C.ma_data_converter_config
[inline]
pub fn data_converter_config_init_default() C.ma_data_converter_config {
	return C.ma_data_converter_config_init_default()
}

// MA_API ma_data_converter_config ma_data_converter_config_init(ma_format formatIn, ma_format formatOut, ma_uint32 channelsIn, ma_uint32 channelsOut, ma_uint32 sampleRateIn, ma_uint32 sampleRateOut);
fn C.ma_data_converter_config_init(format_in Format, format_out Format, channels_in u32, channels_out u32, sample_rate_in u32, sample_rate_out u32) C.ma_data_converter_config
[inline]
pub fn data_converter_config_init(format_in Format, format_out Format, channels_in u32, channels_out u32, sample_rate_in u32, sample_rate_out u32) C.ma_data_converter_config {
	return C.ma_data_converter_config_init(format_in, format_out, channels_in, channels_out,
		sample_rate_in, sample_rate_out)
}

// MA_API ma_result ma_data_converter_init(const ma_data_converter_config* pConfig, ma_data_converter* pConverter);
fn C.ma_data_converter_init(p_config &C.ma_data_converter_config, p_converter &C.ma_data_converter) Result
[inline]
pub fn data_converter_init(p_config &C.ma_data_converter_config, p_converter &C.ma_data_converter) Result {
	return C.ma_data_converter_init(p_config, p_converter)
}

// MA_API void ma_data_converter_uninit(ma_data_converter* pConverter);
fn C.ma_data_converter_uninit(p_converter &C.ma_data_converter)
[inline]
pub fn data_converter_uninit(p_converter &C.ma_data_converter) {
	C.ma_data_converter_uninit(p_converter)
}

// MA_API ma_result ma_data_converter_process_pcm_frames(ma_data_converter* pConverter, const void* pFramesIn, ma_uint64* pFrameCountIn, void* pFramesOut, ma_uint64* pFrameCountOut);
fn C.ma_data_converter_process_pcm_frames(p_converter &C.ma_data_converter, p_frames_in voidptr, p_frame_count_in &u64, p_frames_out voidptr, p_frame_count_out &u64) Result
[inline]
pub fn data_converter_process_pcm_frames(p_converter &C.ma_data_converter, p_frames_in voidptr, p_frame_count_in &u64, p_frames_out voidptr, p_frame_count_out &u64) Result {
	return C.ma_data_converter_process_pcm_frames(p_converter, p_frames_in, p_frame_count_in,
		p_frames_out, p_frame_count_out)
}

// MA_API ma_result ma_data_converter_set_rate(ma_data_converter* pConverter, ma_uint32 sampleRateIn, ma_uint32 sampleRateOut);
fn C.ma_data_converter_set_rate(p_converter &C.ma_data_converter, sample_rate_in u32, sample_rate_out u32) Result
[inline]
pub fn data_converter_set_rate(p_converter &C.ma_data_converter, sample_rate_in u32, sample_rate_out u32) Result {
	return C.ma_data_converter_set_rate(p_converter, sample_rate_in, sample_rate_out)
}

// MA_API ma_result ma_data_converter_set_rate_ratio(ma_data_converter* pConverter, float ratioInOut);
fn C.ma_data_converter_set_rate_ratio(p_converter &C.ma_data_converter, ratio_in_out f32) Result
[inline]
pub fn data_converter_set_rate_ratio(p_converter &C.ma_data_converter, ratio_in_out f32) Result {
	return C.ma_data_converter_set_rate_ratio(p_converter, ratio_in_out)
}

// MA_API ma_uint64 ma_data_converter_get_required_input_frame_count(const ma_data_converter* pConverter, ma_uint64 outputFrameCount);
fn C.ma_data_converter_get_required_input_frame_count(p_converter &C.ma_data_converter, output_frame_count u64) u64
[inline]
pub fn data_converter_get_required_input_frame_count(p_converter &C.ma_data_converter, output_frame_count u64) u64 {
	return C.ma_data_converter_get_required_input_frame_count(p_converter, output_frame_count)
}

// MA_API ma_uint64 ma_data_converter_get_expected_output_frame_count(const ma_data_converter* pConverter, ma_uint64 inputFrameCount);
fn C.ma_data_converter_get_expected_output_frame_count(p_converter &C.ma_data_converter, input_frame_count u64) u64
[inline]
pub fn data_converter_get_expected_output_frame_count(p_converter &C.ma_data_converter, input_frame_count u64) u64 {
	return C.ma_data_converter_get_expected_output_frame_count(p_converter, input_frame_count)
}

// MA_API ma_uint64 ma_data_converter_get_input_latency(const ma_data_converter* pConverter);
fn C.ma_data_converter_get_input_latency(p_converter &C.ma_data_converter) u64
[inline]
pub fn data_converter_get_input_latency(p_converter &C.ma_data_converter) u64 {
	return C.ma_data_converter_get_input_latency(p_converter)
}

// MA_API ma_uint64 ma_data_converter_get_output_latency(const ma_data_converter* pConverter);
fn C.ma_data_converter_get_output_latency(p_converter &C.ma_data_converter) u64
[inline]
pub fn data_converter_get_output_latency(p_converter &C.ma_data_converter) u64 {
	return C.ma_data_converter_get_output_latency(p_converter)
}

// MA_API void ma_pcm_u8_to_s16(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_u8_to_s16(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_u8_to_s16(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_u8_to_s16(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_u8_to_s24(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_u8_to_s24(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_u8_to_s24(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_u8_to_s24(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_u8_to_s32(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_u8_to_s32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_u8_to_s32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_u8_to_s32(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_u8_to_f32(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_u8_to_f32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_u8_to_f32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_u8_to_f32(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s16_to_u8(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s16_to_u8(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s16_to_u8(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s16_to_u8(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s16_to_s24(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s16_to_s24(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s16_to_s24(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s16_to_s24(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s16_to_s32(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s16_to_s32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s16_to_s32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s16_to_s32(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s16_to_f32(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s16_to_f32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s16_to_f32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s16_to_f32(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s24_to_u8(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s24_to_u8(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s24_to_u8(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s24_to_u8(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s24_to_s16(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s24_to_s16(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s24_to_s16(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s24_to_s16(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s24_to_s32(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s24_to_s32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s24_to_s32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s24_to_s32(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s24_to_f32(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s24_to_f32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s24_to_f32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s24_to_f32(p_out, p_in, count, dither_mode)
}
